some enhancements to the view

--- a/public/css/myStyle.css
+++ b/public/css/myStyle.css
@@ -14,3 +14,11 @@ body{
   html{
     font-family: "cairo" !important;
   }
+
+
+
+  button.flex{
+    background: darkblue;
+    color: white;
+    transition: 0.7s all;
+  }
